@@ -3,6 +3,10 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
       when the JNI interface is changed.
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
+25-March-2014:
+=================
++ Group, SharedGroup, Table, TableView & Query now implements Closeable
+
 06-February-2014:
 =================
 + Added get-version and set-version to build.sh.
